src/test/ui/suggestions/fn-or-tuple-struct-with-underscore-args.stderr
error[E0283]: type annotations needed
  --> $DIR/fn-or-tuple-struct-with-underscore-args.rs:16:20
   |
LL |     fn baz(x: usize, y: usize) -> usize { x }
   |     ----------------------------------- required by `T::baz`
...
LL |     let _: usize = T::baz(_, _);
   |                    ^^^^^^ cannot infer type
   |
   = note: cannot resolve `_: T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
